--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -337,15 +337,43 @@
   </div>
 </div>
 {%- endif -%}
-
- <div class="row navbar-fixed-bottom" style="bottom:0px; background:#fff; padding:1em 0 1em 2.6em;">
-    <div class="container">
-      <div class="col-md-offset-8 col-md-2">
-        <button type="submit" class="btn btn-info btn-lg btn-block" style= "margin-left:1em;">Save</button>
-      </div>
-      <div class="col-md-2">
-        <a class="btn btn-default btn-lg btn-block" style= "margin-left:0;" href="{{ request.environ.get('HTTP_REFERER', url_for('submissions.submission_list', form_id=form.id)) }}">Cancel</a>
-      </div>
+<div class="panel panel-default">
+  <div class="panel-heading" id="msgListHeading">
+    <h4 class="panel-title"><a role="button" data-toggle="collapse" href="#msgList" aria-expanded="false" aria-controls="msgList">{{ _('Messages') }}</a></h4>
+  </div>
+  <div id="msgList" class="panel-collapse collapse">
+    <table class="table table-bordered table-hover table-striped" style="margin-bottom: 0px;">
+      <thead>
+        <tr>
+          <th>{{ _('Timestamp') }}</th>
+          <th>{{ _('Number') }}</th>
+          <th>{{ _('Text') }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for msg in submission_messages %}
+        <tr>
+          <td>{{ msg.received }}</td>
+          <td>{{ msg.sender }}</td>
+          <td>{{ msg.text }}</td>
+        </tr>
+        {% else %}
+        <tr>
+          <td colspan="3" class="warning" style="text-align: center;">{{ _('No messages') }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="row navbar-fixed-bottom" style="bottom:0px; background:#fff; padding:1em 0 1em 2.6em;">
+  <div class="container">
+    <div class="col-md-offset-8 col-md-2">
+      <button type="submit" class="btn btn-info btn-lg btn-block" style= "margin-left:1em;">Save</button>
+    </div>
+    <div class="col-md-2">
+      <a class="btn btn-default btn-lg btn-block" style= "margin-left:0;" href="{{ request.environ.get('HTTP_REFERER', url_for('submissions.submission_list', form_id=form.id)) }}">Cancel</a>
+    </div>
     </div>
   </div>
 </div>
