feat: specify format for message timestamp

--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -353,7 +353,7 @@
       <tbody>
         {% for msg in submission_messages %}
         <tr>
-          <td>{{ msg.received }}</td>
+          <td>{{ msg.received|datetimeformat('medium') }}</td>
           <td>{{ msg.sender }}</td>
           <td>{{ msg.text }}</td>
         </tr>
