fix: proper column sizing fix

--- a/apollo/static/src/scss/app-rtl.scss
+++ b/apollo/static/src/scss/app-rtl.scss
@@ -43,3 +43,17 @@
 
 // RTL
 @import "~bootstrap-v4-rtl/scss/rtl";
+
+@mixin make-td-col($size, $columns: $grid-columns) {
+    width: percentage($size / $columns);
+}
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    @for $i from 1 through $grid-columns {
+        td.col#{$infix}-#{$i}, th.col#{$infix}-#{$i} {
+            @include make-td-col($i, $grid-columns);
+        }
+    }
+}
