--- a/apollo/frontend/templates/frontend/macros/pagination.html
+++ b/apollo/frontend/templates/frontend/macros/pagination.html
@@ -1,44 +1,41 @@
 {% macro render_pager(pager, endpoint, args) %}
-<div class="text-center">
-<ul class="pagination pagination-centered">
-<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{{ _('First Page') }}" href="{% if pager.page == 1 %}javascript:;{% else %}{{ url_for(endpoint, page=1, **args) }}{% endif %}">&laquo;</a></li>
-<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{{ _('Previous Page') }}" href="{% if not pager.has_prev %}javascript:;{% else %}{{ url_for(endpoint, page=pager.prev_num, **args) }}{% endif %}">&larr;</a></li>
-{% for pg in pager|pagelist %}
-<li {% if pg == pager.page %}class="active"{% endif %}><a href="{% if pg == pager.page %}javascript:;{% else %}{{ url_for(endpoint, page=pg, **args) }}{% endif %}">{{ pg }}</a></li>
-{% endfor %}
-<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{{ _('Next Page') }}" href="{% if not pager.has_next %}javascript:;{% else %}{{ url_for(endpoint, page=pager.next_num, **args) }}{% endif %}">&rarr;</a></li>
-<li {% if pager.page == pager.pages or not pager.pages %}class="disabled"{% endif %}><a title="{{ _('Last Page') }}" href="{% if pager.page == pager.pages or not pager.pages %}javascript:;{% else %}{{ url_for(endpoint, page=pager.pages, **args) }}{% endif %}">&raquo;</a></li>
-</ul>
+<div class="d-flex flex-row mt-n1 mb-n1 ml-n2 mr-n2">
+    <div class="flex-fill align-self-center">
+        {%- set start = (pager.page - 1) * pager.per_page + 1 -%}
+        {%- if (pager.page * pager.per_page) > pager.total %}
+        {%- set end = pager.total -%}
+        {%- else -%}
+        {%- set end = pager.page * pager.per_page -%}
+        {%- endif -%}
+        {%- set total = pager.total -%}
+        {% if total %}
+        {{ _('Showing %(start)s - %(end)s of %(total)s', start=start, end=end, total=total) }}
+        {% endif %}
+    </div>
+    <div class="align-self-center">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination mb-0 ml-2">
+                <li class="page-item {%- if not pager.has_prev %} disabled{% endif %}"><a class="page-link" href="{% if not pager.has_prev %}javascript:;{% else %}{{ url_for(endpoint, page=pager.prev_num, **args) }}{% endif %}" title="{{ _('Previous') }}"><i class="fa fa-chevron-left"></i></a></li>
+                <li class="page-item {%- if not pager.has_next %} disabled{% endif %}"><a class="page-link" href="{% if not pager.has_next %}javascript:;{% else %}{{ url_for(endpoint, page=pager.next_num, **args) }}{% endif %}" title="{{ _('Next') }}"><i class="fa fa-chevron-right"></i></a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
-{%- set start = (pager.page - 1) * pager.per_page + 1 -%}
-{%- if (pager.page * pager.per_page) > pager.total %}
-{%- set end = pager.total -%}
-{%- else -%}
-{%- set end = pager.page * pager.per_page -%}
-{%- endif -%}
-{%- set total = pager.total -%}
-{% if total %}
-<div class="text-center">
-<ul class="pagination pagination-centered" style="margin-top:0px;">
-<li class="disabled"><a>{{ _('Showing') }} <strong>{{ start }}-{{ end }}</strong> {{ _('of') }} <strong>{{ total }}</strong></a></li>
-</ul>
-</div>
-{% endif %}
 {% endmacro %}
 
 {% macro render_pager_counter(pager, args) %}
-{%- set start = (pager.page - 1) * pager.per_page + 1 -%}
-{%- if (pager.page * pager.per_page) > pager.total %}
-{%- set end = pager.total -%}
-{%- else -%}
-{%- set end = pager.page * pager.per_page -%}
-{%- endif -%}
-{%- set total = pager.total -%}
-{% if total %}
-<div class="text-center">
-<ul class="pagination pull-right" style="margin:-13px 0 7px 0;">
-<li style="color:#999;">{{ _('Showing') }} <strong>{{ start }}-{{ end }}</strong> {{ _('of') }} <strong>{{ total }}</strong></li>
-</ul>
+<div class="d-flex flex-row ml-n2 mr-n2">
+    <div class="flex-fill align-self-center">
+        {%- set start = (pager.page - 1) * pager.per_page + 1 -%}
+        {%- if (pager.page * pager.per_page) > pager.total %}
+        {%- set end = pager.total -%}
+        {%- else -%}
+        {%- set end = pager.page * pager.per_page -%}
+        {%- endif -%}
+        {%- set total = pager.total -%}
+        {% if total %}
+        {{ _('Showing %(start)s - %(end)s of %(total)s', start=start, end=end, total=total) }}
+        {% endif %}
+    </div>
 </div>
-{% endif %}
 {% endmacro %}
