--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -1,56 +1,58 @@
 {% macro render_filter_form(form, filter_form, location) %}
-<form class="form-inline well well-sm filter">
-<div class="form-group">
-{{ filter_form.participant_id(class_='form-control span2 input-sm', placeholder='Participant ID') }}
+<div class="card border-light bg-light mb-3">
+    <div class="card-header">
+        <form class="mb-0 ml-n2 mr-n2">
+            <div class="form-row">
+                <div class="col-2 mb-2">
+                    {{ filter_form.participant_id(class_='form-control', placeholder='Participant ID') }}
+                </div>
+                <div class="col-2">
+                    {{ filter_form.sample(class_='form-control custom-select') }}
+                </div>
+                <div class="col-4">
+                    {{ filter_form.location(class_='form-control select2') }}
+                </div>
+                {%- if form.form_type == 'CHECKLIST' -%}
+                    {%- for group in form.data.groups -%}
+                    {% set field = form.id|string + '__' + group.slug %}
+                    <div class="col-2">
+                        {{ filter_form[field](class_='form-control custom-select') }}
+                    </div>
+                    {%- endfor -%}
+                    <div class="col-2">
+                        {{ filter_form['conjunction'](class_='form-control custom-select') }}
+                    </div>
+                    <div class="col-2">
+                        {{ filter_form['quarantine_status'](class_='form-control custom-select') }}
+                    </div>
+                {%- else -%}
+                    {%- for group in form.data.groups -%}
+                    {%- for field in group.fields -%}
+                    {%- if field['type'] == 'select' -%}
+                    <div class="col-2">
+                        {{ filter_form[field.tag](class_='form-control custom-select') }}
+                    </div>
+                    {%- endif -%}
+                    {%- endfor -%}
+                    {%- endfor -%}
+                    <div class="col-2">
+                        {{ filter_form.status(class_='form-control custom-select select2-container select2', placeholder=_('All Statuses')) }}
+                    </div>
+                {%- endif %}
+                <div class="col-2">
+                    {{ filter_form['sender_verification'](class_='form-control custom-select') }}
+                </div>
+                <div class="col-2">
+                    {{ filter_form['online_status'](class_='form-control custom-select') }}
+                </div>
+                <div class="col-2">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-primary mr-2 flex-fill" type="submit">{{ _('Filter') }}</button>
+                        <a class="btn btn-secondary flex-fill" href="#" id="filter_reset">{{ _('Clear') }}</a>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
-<div class="form-group">
-{{ filter_form.sample(class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-{%- if form.form_type == 'CHECKLIST' %}
-{{ filter_form.location(class_='select2-container span4 select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
-{% else -%}
-{{ filter_form.location(class_='select2-container span4 select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
-{%- endif %}
-</div>
-{%- if form.form_type == 'CHECKLIST' -%}
-{%- for group in form.data.groups -%}
-{% set field = form.id|string + '__' + group.slug %}
-<div class="form-group">
-{{ filter_form[field](class_='form-control span2 input-sm') }}
-</div>
-{%- endfor -%}
-<div class="form-group">
-    {{ filter_form['conjunction'](class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-{{ filter_form['quarantine_status'](class_='form-control span2 input-sm') }}
-</div>
-{%- else -%}
-{%- for group in form.data.groups -%}
-{%- for field in group.fields -%}
-{%- if field['type'] == 'select' -%}
-<div class="form-group">
-{{ filter_form[field.tag](class_='form-control span2 input-sm') }}
-</div>
-{%- endif -%}
-{%- endfor -%}
-{%- endfor -%}
-<div class="form-group">
-{{ filter_form.status(class_='select2-container span2 select2', style='height:26px', placeholder=_('All Statuses')) }}
-</div>
-{%- endif %}
-<div class="form-group">
-    {{ filter_form['sender_verification'](class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-    {{ filter_form['online_status'](class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
-</div>
-<div class="form-group">
-    <a class="btn btn-default btn-sm" id="filter_reset">{{ _('Clear') }}</a>
-</div>
-</form>
 {% endmacro %}
