--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -1,15 +1,26 @@
-{% extends "frontend/_layout.html" %}
+{% extends "frontend/layout.html" %}
 {%- from 'frontend/macros/submission_list_filter.html' import render_filter_form -%}
 {%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
 {%- from 'frontend/macros/submission_list_macros.html' import submission_header, submission_items -%}
 {%- from 'frontend/macros/send_message.html' import send_message_modal -%}
-{% block scripts %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/filters.js') }}"></script>
+
+{% block scripts -%}
+<script type="text/javascript">
+$(function () {
+	$('#filter_reset').on('click', function() {
+		var $form = $(this).parents('form').first();
+		$form.find(':input').not('button').each(function() { $(this).val(''); })
+		$form.submit();
+	});
+	$('select.select2').select2(LocationOptions);
+});
+</script>
 {% if perms.send_messages.can() %}
 {{ send_message_modal(pager.total) }}
 {% endif %}
 {% endblock %}
-{% block toolbar %}
+
+{% block toolbar -%}
 {% if form.form_type == 'INCIDENT' %}
 {% if perms.add_submission.can() %}
 <div class="btn-group pull-right">
@@ -40,35 +51,30 @@
 </div>
 {% endif %}
 {% endblock %}
-{% block content %}
+
+{% block content -%}
 <div class="row">
   <div class="col-md-12">
     {{ render_filter_form(form, filter_form, location) }}
   </div>
 </div>
-<div class="row">
-  <div class="col-md-12">
-     {{ render_pager_counter(pager, args) }}
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="table-responsive responsive">
-      <table class="table table-striped table-bordered table-hover">
-          <thead >
-            {{ submission_header(form, form_fields, location_types, perms) }}
-          </thead>
-          <tbody>
-            {{ submission_items(pager.items, form, form_fields, location_types, perms) }}
-          </tbody>
-        </table>
-      </div>
-  </div>
+
+<div class="card-header">
+  {{ render_pager(pager, 'submissions.submission_list', args) }}
 </div>
 
-<div class="row">
-  <div class="col-md-12">
+<div class="table-responsive-md mb-n3">
+  <table class="table table-sm table-hover">
+    <thead >
+      {{ submission_header(form, form_fields, location_types, perms) }}
+    </thead>
+    <tbody>
+      {{ submission_items(pager.items, form, form_fields, location_types, perms) }}
+    </tbody>
+  </table>
+</div>
+
+<div class="card-footer">
   {{ render_pager(pager, 'submissions.submission_list', args) }}
-  </div>
 </div>
 {% endblock %}
