--- a/apollo/frontend/templates/frontend/layout.html
+++ b/apollo/frontend/templates/frontend/layout.html
@@ -105,7 +105,7 @@
     </nav>
 
     <div class="container mt-2">
-        <div class="d-flex justify-content-between align-items-center flex-column flex-md-row">
+        <div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row">
             <nav class="nav" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-n1">
                     {% block title -%}
