--- a/apollo/static/src/scss/_custom.scss
+++ b/apollo/static/src/scss/_custom.scss
@@ -1,1 +1,3 @@
-$font-size-base:              0.75rem !default;
+$font-size-base:                0.75rem !default;
+$dropdown-item-padding-y:       0.1875rem !default;
+$dropdown-item-padding-x:       1.125rem !default;
