fix: toolbar margins

--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -45,7 +45,7 @@ $(function () {
 {% endif %}
 {% endif %}
 {% if perms.send_messages.can() %}
-<button class="btn btn-success" id="send_message_modal_btn" style="margin-right:1em;">{{ _('Send Message') }}</button>
+<button class="btn btn-success" id="send_message_modal_btn">{{ _('Send Message') }}</button>
 {% endif %}
 </div>
 {% endblock %}
