--- a/apollo/frontend/templates/frontend/layout.html
+++ b/apollo/frontend/templates/frontend/layout.html
@@ -107,14 +107,14 @@
     <div class="container mt-2">
         <div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row">
             <nav class="nav" aria-label="breadcrumb">
-                <ol class="breadcrumb mb-n1">
+                <ol class="breadcrumb mb-n2">
                     {% block title -%}
                     <li class="breadcrumb-item">{{ page_title }}</li>
                     <li class="breadcrumb-item active" aria-current="page">{{ page_subtitle }}</li>
                     {%- endblock %}
                 </ol>
             </nav>
-            <div class="d-flex justify-content-between align-items-start flex-column flex-md-row">
+            <div class="d-flex justify-content-between align-items-start flex-column flex-md-row mt-2">
                 {% block toolbar %}{% endblock %}
             </div>
         </div>
